style.css
:root {
    --white: #FFFFFF;
    --grey-1: #242424;
    --grey-2: #202020;
    --yellow-1: #f4eddd;
}

html {
    scroll-behavior: smooth;
}

* {
    margin: 0;
    padding: 0;
    font-family: 'Commissioner', sans-serif;
}

body {
    background-color: var(--white);
    color: var(--grey-1);
}

section, footer {
    height: 100vh;
}

#projects {
    height: auto;
}

header {
    height: calc(100vh - 60px);
    padding-top: 60px;
    position: relative;
    background: var(--yellow-1);
}

header>div {
    height: 60px;
    color: var(--white);
    background-color: var(--grey-2);
    position: absolute;
    top: 0px;
    width: calc(100% - 2rem);
    padding: 0 1rem 0 1rem;
    display: flex;
    flex-flow: row nowrap;
    justify-content: space-between;
    align-items: center;
}

h1 {
    text-transform: uppercase;
}

nav>a {
    text-decoration: none;
    color: var(--white);
    font-size: 1.5rem;
    padding-right: 1rem;
}

header p {
    position: absolute;
    top: calc(50vh - 2.5rem);
    left: 4rem;
    width: calc(45% - 4rem);
    color: var(--grey-1);
    font-size: 2.5rem;
}

header img {
    position: absolute;
    top: calc(50% - 300px + 30px);
    right: calc(30% - 200px);
    height: 600px;
    width: 400px;
    object-fit: cover;
    object-position: -5px 0;
}

#about>div {
    height: 100%;
    width:60%;
    padding: 0 20%;
    display: flex;
    flex-flow: column nowrap;
    justify-content: center;
}

#about h2, #about p:first-of-type {
    padding-bottom: 1rem;
    font-size: 2rem;
}

#about p:first-of-type {
    padding-bottom: 1.4rem;
    font-size: 2rem;
}

#about p {
    padding-bottom: 1rem;
    font-size: 1.2rem;
}

#about span {
    background: var(--grey-1);
    padding: 0 0.4rem;
    color: var(--white);
}

#skillset {
    background-color: #58B09C;
}

#skillset * {
    color: var(--white);
}

#skillset>div {
    height: 90%;
    padding: 0 30%;
    display: flex;
    flex-flow: column nowrap;
    justify-content: center;
    align-items: center;
}

#skillset h2 {
    font-size: 2rem;
    padding-bottom: 5rem;
}

#skillset ul {
    list-style-type: none;
    display: flex;
    flex-flow: row wrap;
    justify-content: space-between;
    align-items: flex-start;
}

#skillset ul li {
    width: 7rem;
    height: 2rem;
    margin: 1rem 2rem;
    display: flex;
    flex-flow: row nowrap;
    justify-content: space-between;
    align-items: center;
}

#skillset svg {
    fill: var(--white);
    height: 2rem;
    width: 2rem;
}

#projects h2 {
    width: 100%;
    height: 10vh;
    font-size: 2rem;
    display: flex;
    flex-flow: row nowrap;
    justify-content: center;
    align-items: center;
}

#projects-grid {
    display: grid;
    grid-template-columns: repeat(10, 10%);
    grid-template-rows: repeat(4, 20rem);
    grid-template-areas:
    ". project-1 project-1 project-1 project-1 project-1 . . . ."
    ". . . . project-2 project-2 project-2 project-2 project-2 ."
    ". project-3 project-3 project-3 project-3 project-3 . . . ."
    ". . . . project-4 project-4 project-4 project-4 project-4 .";
    row-gap: 2rem;
}

div.project-1 {
    grid-area: project-1;
    background: linear-gradient(0.25turn, rgba(200, 210, 225, 0.1), rgba(200, 210, 225, 0.2)), url("./assets/projects/architect.png");
    background-position: center;
    background-size: cover;
}

div.project-1:hover {
    background: linear-gradient(0.25turn, rgba(0, 10, 25, 0.5), rgba(0, 10, 25, 0.4)), url("./assets/projects/architect.png");
    background-position: center;
    background-size: cover;
}

div.project-2 {
    grid-area: project-2;
    background: linear-gradient(0.25turn, rgba(210, 210, 255, 0.1), rgba(210, 210, 225, 0.2)), url("./assets/projects/spacefrens.png");
    background-size: cover;
    background-position: center;
}

div.project-2:hover {
    background: linear-gradient(0.25turn, rgba(0, 0, 15, 0.3), rgba(0, 0, 15, 0.4)), url("./assets/projects/spacefrens.png");
    background-position: center;
    background-size: cover;
}

div.project-3 {
    grid-area: project-3;
    background: linear-gradient(0.25turn, rgba(210, 225, 225, 0.1), rgba(225, 210, 225, 0.2)), url("./assets/projects/pokedex.png");
    background-size: cover;
    background-position: center;
}

div.project-3:hover {
    background: linear-gradient(0.25turn, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.4)), url("./assets/projects/pokedex.png");
    background-position: center;
    background-size: cover;
}

div.project-4 {
    grid-area: project-4;
    background: linear-gradient(0.25turn, rgba(90, 20, 10, 0.2), rgba(90, 20, 10, 0.1)), url("./assets/projects/platformer-crop.png");
    background-size: cover;
    background-position: center;
}

div.project-4:hover {
    grid-area: project-4;
    background: linear-gradient(0.25turn, rgba(15, 10, 0, 0.5), rgba(15, 10, 0, 0.4)), url("./assets/projects/platformer-crop.png");
    background-size: cover;
    background-position: center;
}

#projects-grid div {
    padding: 0 16rem 0 5rem;
    display: flex;
    flex-flow: column nowrap;
    justify-content: center;
    align-items: right;
}

#projects-grid span {
    display: flex; 
    flex-flow: row nowrap;
    justify-content: flex-start;
}

#projects-grid h3 {
    font-size: 1.8rem;
}

#projects-grid p {
    font-size: 1.1rem;
}

#projects-grid p, #projects-grid a {
    width:fit-content;
    background: rgba(0, 0, 0, 0.6);
    margin-bottom: 1rem;
    padding: 0.2rem 0.5rem;
    color: var(--white);
}

#projects-grid a {
    text-decoration: none;
}

#projects-grid a:hover {
    text-decoration: underline;
}

#projects-grid span>a {
    margin-right: 1rem;
}

#projects-grid p>a{
    text-decoration: none;
    font-size: 1.1rem;
    padding: 0 0.2rem 0 0.2rem;
}

#projects-grid div>a:not(:first-child) {
    font-size: 1.1rem;
}

#interests h2 {
    width: 100%;
    height: 10%;
    font-size: 2rem;
    display: flex;
    flex-flow: row nowrap;
    justify-content: center;
    align-items: center;
}

#interests-grid {
    display: grid;
    grid-template-columns: repeat(2, 50%);
    grid-template-rows: repeat(3, 30vh);
    grid-gap: 0;
}

#interests-grid>div {
    display: flex;
    flex-flow: column nowrap;
    align-items: center;
    justify-content: center;
    background-position: center;
    background-size: cover;
}


.interests-exercise {
    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),  url("./assets/interests/exercise.jpeg");
}


.interests-music {
    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),  url("./assets/interests/music.jpeg");
}

.interests-reading {
    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),  url("./assets/interests/reading.jpeg");
}

.interests-tech {
    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),  url("./assets/interests/tech.jpeg");
}

.interests-gaming {
    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),  url("./assets/interests/gaming.jpeg");
}

.interests-lifestyle {
    background: linear-gradient(rgba(0, 40, 60, 0.5), rgba(0, 40, 60, 0.5)),  url("./assets/interests/lifestyle.jpeg");
}

#interests h3 {
    color: var(--white);
    font-size: 1.5rem;
}

#interests li {
    list-style-type: none;
    color: var(--white);
    font-size: 1.2rem;
    text-align: center;
    padding-top: 0.2rem;
}

footer {
    display: flex;
    flex-flow: column nowrap;
    justify-content: center;
    align-items: center;
}

footer hr {
    width: 10em;
    height: 0.2em;
    margin: 1em 0 2em 0;
    border: none;
    background-color: var(--grey-1);
}

footer a {
    margin: 0 1em 0 1em;
}

